--- a/css/services.css
+++ b/css/services.css
@@ -1,26 +1,26 @@
 
-#services_page_content {
+#services_vehicles_page_content {
 	padding: 0px 30px 0px 30px;
 	color: #222;
 }
 
-.service_container {
+.services_vehicles_container {
 	width: 410px;
 	float: left;
 	padding:0px 15px 0px 15px;
 	border-top: 1px solid #999;
 	margin-bottom: 25px;
 	box-shadow: 0px -1px 0px #fff;
-	-moz-box-shadow: 0px -1x 0px #fff;
+	-moz-box-shadow: 0px -1px 0px #fff;
 	-webkit-box-shadow: 0px -1px -0px #fff;
 	-o-box-shadow: 0px -1px 0px #fff;
 }
 
-.services_page_seperator {
+.services_vehicles_page_seperator {
 	border-left: 1px solid #999;
 }
 
-.services_page_img_container {
+.services_vehicles_page_img_container {
 	float: left;
 	margin: 20px 15px 20px 0px;
 	border-radius: 16px;
@@ -36,24 +36,24 @@
 
 }
 
-.services_page_img_container img {
+.services_vehicles_page_img_container img {
 	max-width: 100%;
 	float: left;
 	border-radius: 16px;
 	-webkit-border-radius: 16px;
 }
 
-.service_container h3 {
+.services_vehicles_container h3 {
 	float: left;
 	margin: 20px 0px 20px 25px;
-	font: 1.25em/1.4 "Share", 'Share-Regular', Arial, Helvetica, sans-serif;
+	font: 1.25em/1.4  Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	color: #0084FF;
 	text-shadow: 0px 1px 0px #fff;
 	
 }
 
-.service_container ul {
+.services_vehicles_container ul {
 	float: left;
 	list-style: disc;
 	list-style-position: inside;
@@ -62,6 +62,6 @@
 	
 }
 
-.service_container p {
+.services_vehicles_container p {
 	clear: both;
 }
